# png-color-uniformizer

./: .gitignore  CMakeLists.txt  README.md  READMEold.md  display_image.c  findcrash.sh  iterpixel.sh  main.c  main.cpp  manual.cpp  modify.c  patch.c  pixel.c  pngpixel.c  pngtopng.c  transform.c  uniformizer.h
include/: km.h  pcu.h  uniformizer.h
src/: km.c  manual.cpp  patch.c  pixel.c  transform.c
